# todo-app-phase-2

.claude/: settings.local.json
hackathon-2-TODO-App/: .env.example  CLARIFICATIONS.md  README.md  SPECIFICATION.md  STATUS.md
hackathon-2-TODO-App/.claude/: settings.local.json
hackathon-2-TODO-App/backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
hackathon-2-TODO-App/backend/alembic/: env.py
hackathon-2-TODO-App/backend/alembic/versions/: 5549b5084c4e_add_password_hash_to_users_table.py  7fcae9ae4171_initial_schema_users_and_tasks_tables.py  d014bf00572f_add_priority_category_and_due_date_to_.py
hackathon-2-TODO-App/backend/src/: db.py  main.py  models.py
hackathon-2-TODO-App/backend/src/middleware/: auth.py
hackathon-2-TODO-App/backend/src/routes/: auth.py  tasks.py
hackathon-2-TODO-App/backend/src/utils/: auth_utils.py
hackathon-2-TODO-App/frontend/: package-lock.json  package.json
hackathon-2-TODO-App/frontend/app/: globals.css  layout.tsx  page.tsx
hackathon-2-TODO-App/frontend/app/dashboard/: page.tsx
hackathon-2-TODO-App/frontend/app/login/: page.tsx
hackathon-2-TODO-App/frontend/app/register/: page.tsx
hackathon-2-TODO-App/frontend/components/: AddTaskForm.tsx  DeleteConfirmModal.tsx  DueDatePicker.tsx  EditTaskModal.tsx
hackathon-2-TODO-App/frontend/components/ui/: Modal.tsx  Textarea.tsx  (+1 more)
hackathon-2-TODO-App/frontend/lib/: api.ts  auth.ts  toast.ts
hackathon-2-TODO-App/todo-app/: AGENTS.md
hackathon-2-TODO-App/todo-app/specs/: IMPLEMENTATION-GUIDE.md  TASKS-DETAILED-PHASE2-5.md  TASKS.md  TECHNICAL-PLAN.md
(+18 files in other folders)
